update css to fix bg pride flag on firefox

--- a/OculusDB/frontend/style.css
+++ b/OculusDB/frontend/style.css
@@ -128,7 +128,7 @@
 html {
     background-image: url(/cdn/flag.svg);
     background-attachment: fixed;
-    background-blend-mode: darken;
+    background-blend-mode: multiply;
     background-size: cover;
     background-color: #111111DD;
     font-family: 'Open Sans';
